# cross-section

./: .gitignore  ARCHITECTURE.md  COMPONENT_SPEC.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  USER_STORIES.md  pyproject.toml
docs/: connection_model.md  design_decisions.md  domain_and_solver.md  viktor_vendoring.md
examples/: asymmetric_cut_fill.py  basic_section.py  curb_and_gutter.py  cut_and_fill.py  layered_pavement.py  road_with_shoulders.py  roadside_ditch.py  shoring_example.py  slumped_shoulder.py  symmetric_section.py
src/cross_section/: __init__.py
src/cross_section/core/: __init__.py
src/cross_section/core/domain/: __init__.py  base.py  pavement.py  section.py
src/cross_section/core/domain/components/: __init__.py  curbs.py  ditches.py  lanes.py  shoring.py  shoulders.py  slopes.py
src/cross_section/core/geometry/: __init__.py  primitives.py
src/cross_section/export/: __init__.py  svg.py
tests/: __init__.py
tests/core/: test_components.py  test_layered_lane.py  test_pavement.py  test_primitives.py  test_section.py  test_shoring.py  test_shoulder.py
