[project]
name = "cross-section"
version = "0.1.0"
description = "Modular system for creating, validating, and exporting road cross-sections"
authors = [{name = "Samuel Kreimeyer"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
# CAD export and 3D operations
cad = [
    "cadquery>=2.4",
]

# Geometric validation
validation = [
    "shapely>=2.0",
]

# SVG export
svg = [
    "svgwrite>=1.4",
]

# Web API
web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
]

# CLI
cli = [
    "typer>=0.9.0",
    "rich>=13.7.0",  # For nice CLI output
]

# VIKTOR integration
viktor = [
    "viktor>=14.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",  # Property-based testing
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
]

# All optional dependencies
all = [
    "cadquery>=2.4",
    "shapely>=2.0",
    "svgwrite>=1.4",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/cross_section --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]
